# nextjs-fastapi-postgres-starter

./: README.md  setup.md
backend/: check_db.py  create_tables.py  main.py  models.py  pyproject.toml  pytest.ini  seed.py
backend/backup/: test_api_simple.py  test_multi_user.py
backend/notebooks/: api_testing.ipynb
backend/tests/: README.md  conftest.py  run_tests.py  test_api_basic.py  test_multi_user.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ChatInterface.tsx  UserSelector.tsx
frontend/app/types/: index.ts
frontend/app/utils/: api.ts
