[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2-binary = "*"
uvicorn = "*"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
